# python-extensions-static-site-generator

./: pyproject.toml  ssg.py
ssg/: extensions.py  hooks.py  parsers.py  site.py
ssg/extensions/: menu.py  stats.py
